cart.css
@import "style.css";

.cart-main {
    display: flex;

    width: 100%;
}

.items-col {
    display: flex;
    flex-direction: column;
    width: 67%;

    padding: 1rem;
    gap: 1rem;
}

.payment-col {
    display: flex;
    flex-direction: column;
    width: 33%;

    margin: 1rem;
    padding: 1rem;
    gap: 0.5rem;
    border: 1px solid var(--color-alt);
}

.payment-col > * {
    margin: 0;
}

@media (aspect-ratio <= 2/3) {
    .cart-main {
        flex-direction: column;
    }

    .items-col {
        width: 100%;
    }

    .payment-col {
        width: 100%;
        margin: 0;
    }
}

.cart-item {
    display: flex;
    border: 1px solid var(--color-alt);
    padding: 0.5rem;
    gap: 0.5rem;

    align-items: center;

    color: var(--color-text);
    text-decoration: unset;
}

.item-image {
    width: 3rem;
    height: 3rem;
    object-fit: cover;
}

.item-name {
    font-size: 1.3rem;
    font-weight: 700;

    text-wrap: nowrap;
    text-overflow: ellipsis;
    overflow-x: hidden;
    line-height: 1.3;
}

.item-name:hover > .product-name,
.item-name:focus > .product-name {
    text-decoration: underline;
}

.amount-controls {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    background-color: var(--color-alt);
}

.price {
    font-weight: 700;
    font-size: 1.3rem;
    width: 5rem;
    text-align: end;
}

.price-row {
    width: 100%;
    height: fit-content;
    display: flex;
    justify-content: space-between;
}

.price-row > * {
    margin-block: 0;
}

.total-price {
    font-weight: 700;
}

.checkout-link {
    font-weight: 700;
    width: 100%;
    padding: 0.5rem;
    background-color: var(--color-alt);
    text-align: center;
}

